# maker

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  cliff.toml  maker.cpp  syntax-guide.md
.github/workflow/: build.yaml
.github/workflows/: build.yaml
changelog/: 1.3.0-CHANGELOG.md
depends/libuv/: CMakeLists.txt
depends/tiny-process-library/: CMakeLists.txt
depends/yaml-cpp/: CMakeLists.txt
example/: test.yml
include/: analyze.cpp  analyze.hpp  cmd.c  cmd.h  execute.cpp  execute.h  execute.hpp  get.cpp  get.h  get.hpp  judge.cpp  judge.h  main.h  print.cpp  print.h  print.hpp  root.hpp  shell.cpp  shell.hpp
